--- a/AquaFeel/Localizable.xcstrings
+++ b/AquaFeel/Localizable.xcstrings
@@ -2417,6 +2417,9 @@
     "Total Leads %lld" : {
 
     },
+    "Total: %lld" : {
+
+    },
     "Transaction completed correctly!" : {
       "localizations" : {
         "es-419" : {
